fixed screenshot rendering bug on iPhone

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -4,6 +4,8 @@
   display: flex;
   box-shadow: 0 0 120px rgba(black, 0.2);
   overflow: hidden;
+  position: relative;
+  z-index: 2;
   &-imageWrapper {
     position: relative;
     width: 34%;
@@ -56,6 +58,9 @@
   background-image: linear-gradient(to bottom, rgba(white, 0), white 90%);
   @media (max-width: 960px) {
     padding: 100px 0;
+  }
+  @media (max-width: 500px) {
+    padding-top: 60px;
   }
 }
 
